--- a/app/src/main/res/layout/photo_item_layout.xml
+++ b/app/src/main/res/layout/photo_item_layout.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.blsoft.photoexplorer.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="8dp"
-    android:layout_height="150dp">
-
+    android:layout_height="match_parent">
     <ImageView
-        android:background="@android:color/black"
         android:id="@+id/photoView"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:layout_width="150dp"
-        android:layout_height="150dp" />
-</FrameLayout>
+        tools:ignore="ContentDescription" />
+</com.blsoft.photoexplorer.SquareFrameLayout>
