--- a/app/src/main/res/layout/activity_photo_details.xml
+++ b/app/src/main/res/layout/activity_photo_details.xml
@@ -20,74 +20,54 @@
             android:scaleType="fitCenter"
             tools:ignore="ContentDescription" />
 
-        <LinearLayout
+
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+            android:layout_height="wrap_content">
+            <TableRow>
+                <TextView
+                    android:layout_column="1"
+                    android:padding="8dp"
+                    android:text="@string/photographer"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/photographer"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+                <TextView
+                    android:id="@+id/photographerTextView"
+                    android:gravity="right"
+                    android:padding="8dp"
+                    android:layout_weight="1"
+                    tools:text="John Doe" />
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:layout_column="1"
+                    android:padding="8dp"
+                    android:text="@string/location"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
-            <TextView
-                android:id="@+id/photographerTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                tools:text="John Doe" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/locationTextView"
+                    android:gravity="right"
+                    android:padding="8dp"
+                    android:layout_weight="1"
+                    tools:text="Boston, MA" />
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:layout_column="1"
+                    android:padding="8dp"
+                    android:text="@string/title"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+                <TextView
+                    android:id="@+id/photoTitleTextView"
+                    android:gravity="right"
+                    android:padding="8dp"
+                    android:layout_weight="1"
+                    tools:text="Lorem ipsum blah blah blah blah asdfasdfasdfasdfasdfasdf contemp hoodwinked robin india" />
+            </TableRow>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+        </TableLayout>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/location"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
-
-            <TextView
-                android:id="@+id/locationTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:gravity="end"
-                android:textAlignment="textEnd"
-                tools:text="Boston, MA" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/title"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
-
-            <TextView
-                android:id="@+id/photoTitleTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:gravity="end"
-                android:textAlignment="textEnd"
-                tools:text="IMG_7305 (2)asdfasdfasdfasdfasdfasdf contemp hoodwinked robin india" />
-        </LinearLayout>
 
 
     </LinearLayout>
